--- a/packages/ui/src/styles/theme.css
+++ b/packages/ui/src/styles/theme.css
@@ -8,6 +8,8 @@
   --font-size-base: 14px;
   --font-size-large: 16px;
   --font-size-x-large: 20px;
+  --font-size-2x-large: 36px;
+  --font-size-3x-large: 48px;
   --font-weight-regular: 400;
   --font-weight-medium: 500;
   --line-height-large: 150%;
