--- a/packages/ui/src/components/dialog.css
+++ b/packages/ui/src/components/dialog.css
@@ -17,9 +17,10 @@
 
 [data-component="dialog"] {
   position: fixed;
-  inset: 0;
-  margin-left: var(--dialog-left-margin);
-  margin-right: var(--dialog-right-margin);
+  top: 0;
+  bottom: 0;
+  left: var(--dialog-left-margin);
+  right: var(--dialog-right-margin);
   z-index: 50;
   display: flex;
   align-items: center;
